--- a/Direct3D_0417/Direct3D_0417.vcxproj.filters
+++ b/Direct3D_0417/Direct3D_0417.vcxproj.filters
@@ -41,5 +41,11 @@
     <MeshContentTask Include="Assets\ball.FBX">
       <Filter>Assets</Filter>
     </MeshContentTask>
+    <MeshContentTask Include="Assets\ground_200m.FBX">
+      <Filter>Assets</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\tea_pot.FBX">
+      <Filter>Assets</Filter>
+    </MeshContentTask>
   </ItemGroup>
 </Project>
