--- a/Direct3D_0417/Direct3D_0417.vcxproj
+++ b/Direct3D_0417/Direct3D_0417.vcxproj
@@ -196,6 +196,7 @@
     <MeshContentTask Include="Assets\ball.FBX" />
     <MeshContentTask Include="Assets\ground_1m.FBX" />
     <MeshContentTask Include="Assets\ground_200m.FBX" />
+    <MeshContentTask Include="Assets\Head.FBX" />
     <MeshContentTask Include="Assets\skydome.FBX" />
     <MeshContentTask Include="Assets\tea_pot.FBX" />
   </ItemGroup>
