--- a/Direct3D_0417/Direct3D_0417.vcxproj
+++ b/Direct3D_0417/Direct3D_0417.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="DebugCamera.h" />
     <ClInclude Include="ForrowCamera.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Obj3D.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="StepTimer.h" />
   </ItemGroup>
@@ -175,6 +176,7 @@
     <ClCompile Include="ForrowCamera.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Obj3D.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
